# bosun1043.github.io

./: CMakeLists.txt  README.md  _config.yml  index.html
css/: jonbarron.css  style.css
include/backtest/: Backtest.hpp  PerformanceMetrics.hpp
include/market/: Stock.hpp
include/portfolio/: Portfolio.hpp
include/strategy/: MomentumStrategy.hpp  Strategy.hpp  StrategyResult.hpp
include/utils/: DataLoader.hpp  PerformanceOptimizer.hpp
js/: main.js
js/components/: charts.js
js/services/: api.js  strategies.js
quant/: BacktestResult.hpp  CMakeLists.txt  IStrategy.hpp  Portfolio.cpp  Portfolio.hpp  Position.cpp  Position.hpp  QualityStrategy.cpp  QualityStrategy.hpp  QuantStrategy.cpp  QuantStrategy.hpp  QuantStrategyManager.cpp  QuantStrategyManager.hpp  StockData.cpp  StockData.hpp  StockDataProvider.cpp  StockDataProvider.hpp  StrategyWeights.cpp  StrategyWeights.hpp  main.cpp
src/: main.cpp
src/portfolio/: Portfolio.cpp
src/server/: APIServer.cpp
src/strategy/: MomentumStrategy.cpp  QualityStrategy.cpp  StrategyResult.cpp  ValueStrategy.cpp
src/utils/: DataLoader.cpp  PerformanceOptimizer.cpp
